force-app/main/default/objects/Address__c/Address__c.object-meta.xml
<CustomObject>
    <label>Alternate Bill to Name and Address</label>
    <nameField>
        <label>Bill To Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alternate Bill to Name and Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>