force-app/main/default/objects/Address__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>if(LEN(Street__c )&gt;0, Street__c &amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(City__c )&gt;0, City__c &amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(State__c )&gt;0, State__c &amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Zip_Postal_Code__c )&gt;0, Zip_Postal_Code__c,&quot;&quot;) &amp; BR() &amp;
If(LEN(Country__c) &gt;0,Country__c ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>