force-app/main/default/objects/Address__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>To describe purpose of this address, i.e. Japan Office or to be used for HPL invoices, etc.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>